# reduced-c-compiler

./: CMakeLists.txt  Makefile  README.md  ReducedCCompiler.sln  forloop_variable_shadowing2.c  right_merge.c  run.cmd  test.c  test_address_of_global.c  test_global.c  test_mem.c  test_op_addr_cancel_deref.c  test_pointers.c  test_short_circuit.c
MiniStackMachine/: MiniStackMachine.vcxproj  MiniStackMachine.vcxproj.filters
MiniStackMachine/src/: msm.c
ReducedCCompiler/: ReducedCCompiler.vcxproj  ReducedCCompiler.vcxproj.filters  runtime.c
ReducedCCompiler-Test/: .gitignore  ReducedCCompiler-Test.pyproj  ReducedCCompiler_Test.py  tests_utils.py
ReducedCCompiler-Test/others/: semantic.c
ReducedCCompiler-Test/test_binary_ops_pkg/: binary_ops.c  binary_ops.msm.ref  binary_ops.txt.ref  binary_ops_exec.txt.ref  binary_ops_opti.msm.ref  binary_ops_syn.txt.ref  short_circuit.c  short_circuit.msm.ref  short_circuit_exec.txt.ref  short_circuit_syn.txt.ref  test_binary_ops.py
ReducedCCompiler-Test/test_conditions_pkg/: simple_else.c  simple_else.msm.ref  simple_else_sem.txt.ref  simple_else_syn.txt.ref  simple_if.c  simple_if.msm.ref  simple_if_sem.txt.ref  simple_if_syn.txt.ref  test_conditions.py
ReducedCCompiler-Test/test_extra_pkg/: assign_overflow.c  assign_too_big.c  bin_val.c  bin_val.txt.ref  decl_assign.c  div_zero.c  do_while.c  do_while_break.c  do_while_continue.c  elseif.c  for1.c  for_break.c  for_continue.c  func_args.c  func_args.txt.ref  func_call.c  func_cond.c  func_cond.txt.ref  func_loop.c  func_rec.c  func_rec.txt.ref  func_rec2.c  func_ret.c  func_ret2.c  hex_val.c  hex_val.txt.ref  inval_call.c  invalid_cond.c  invalid_varname.c  loop_scope.c  lots_do_while.c  lots_for.c  lots_scopes.c  lots_var.c  lots_while.c  main.c  mult_expr.c  mult_line.c  multiple_assigment.c  multiple_assigment2.c  (+35 more)
ReducedCCompiler-Test/test_lexical_pkg/: junk_lex.txt.ref  mix.txt.ref  mix_lex.txt.ref  test_lexical.py  valid_lex.txt.ref
ReducedCCompiler-Test/test_loops_pkg/: break.c  break.msm.ref  break_exec.txt.ref  continue.c  continue.msm.ref  continue_exec.txt.ref  do_while.c  do_while.msm.ref  do_while_exec.txt.ref  do_while_sem.txt.ref  do_while_syn.txt.ref  for.c  for.msm.ref  for_decl.c  for_decl.msm.ref  for_decl_sem.txt.ref  for_decl_syn.txt.ref  for_sem.txt.ref  for_syn.txt.ref  test.c  test_break_continue.py  test_loops.py  var_shadowing.c  while.c  while.msm.ref  while_sem.txt.ref  while_syn.txt.ref
ReducedCCompiler-Test/test_memory_pkg/: left_merge.c  left_merge.txt.ref  malloc_edge_case.c  malloc_edge_case.msm.ref  reuse_block_diff_length.c  reuse_block_diff_length.msm.ref  right_merge.c  right_merge.txt.ref  simple_reuse_freeblock.c  simple_reuse_freeblock.msm.ref  split_blocks.c  split_blocks.msm.ref  split_blocks.txt.ref  test_memory.py
ReducedCCompiler-Test/test_unary_ops_pkg/: test_unary_ops.py  unary_ops.c  unary_ops.msm.ref  unary_ops.txt.ref  unary_ops_exec.txt.ref  unary_ops_opti.msm.ref  unary_ops_syn.txt.ref
ReducedCCompiler-Test/test_variables_pkg/: address_of_cancel_deref.c  address_of_cancel_deref.msm.ref  address_of_cancel_deref_sem.txt.ref  address_of_cancel_deref_syn.txt.ref  address_of_global.c  address_of_global.msm.ref  address_of_global_sem.txt.ref  address_of_global_syn.txt.ref  global_var.msm.ref  global_var_sem.txt.ref  global_var_syn.txt.ref  pointer.c  pointer.msm.ref  pointer_exec.txt.ref  pointer_sem.txt.ref  pointer_syn.txt.ref  test_variables.py  variables.c  variables.msm.ref  variables_exec.txt.ref  variables_opti.msm.ref  variables_sem.txt.ref  variables_syn.txt.ref
ReducedCCompiler/res/: junk.c  mix.c  semantic.c  simple_expression.c  test.c  valid.c
ReducedCCompiler/src/: code_generation.c  code_generation.h  main.c  optimization.h  semantic_analysis.c  semantic_analysis.h  syntactic_analysis.c  syntactic_analysis.h  syntactic_node.c  syntactic_node.h  token.c  token.h
c-msm/: CMakeLists.txt
c-msm/ReducedCCompiler/: runtime.c
c-msm/ReducedCCompiler/src/: code_generation.c  optimization.h  semantic_analysis.c  syntactic_analysis.c  syntactic_analysis.h  syntactic_node.c  syntactic_node.h  token.c  token.h
cpp-x86_64/: CMakeLists.txt
cpp-x86_64/src/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  main.cpp
